--- a/client/src/app/styles/index.css
+++ b/client/src/app/styles/index.css
@@ -2,6 +2,10 @@
   background-color: #fff;
 }
 
+*{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
   background-color: var(--background-primary);
 }
