--- a/client/src/widgets/Footer/Footer.module.css
+++ b/client/src/widgets/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
     text-align: center;
-    bottom: "0";
-    position: fixed;
-    width: 100%;
+    bottom: 0;
+    margin-top: 25px;
+    width: 100vw;
     background-color: #fff;
     color: var(--button-primary);
 }
