--- a/client/src/widgets/Footer/Footer.module.css
+++ b/client/src/widgets/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     text-align: center;
     bottom: 0;
     margin-top: 25px;
+    position: relative;
     width: 100vw;
     background-color: #fff;
     color: var(--button-primary);
