--- a/client/src/widgets/NavBar/NavBar.module.css
+++ b/client/src/widgets/NavBar/NavBar.module.css
@@ -1,23 +1,13 @@
-.avatar {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.avatarContainer {
-    display: flex;
-    align-items: center;
-}
-
 .menu {
     display: flex;
-    justify-content: space-between;
-    width: 100vw;
+    justify-content: space-evenly;
+    width: 100%;
+    float: right;
 }
 
 .header {
-    width: 100vw;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    border-radius: 30px;
+    margin: 10px 40px;
 }
