--- a/client/src/pages/UserPage/UserPage.module.css
+++ b/client/src/pages/UserPage/UserPage.module.css
@@ -9,10 +9,8 @@
 .button {
     border: #ffffff00;
     background-color: #ffffff00;
-    /* display: flex; */
     font-size: 20px;
     align-items: start;
-    
 }
 
 .button:active {
@@ -44,52 +42,41 @@
 }
 
 .settingIcon {
-    display: flex;
+    opacity: 0;
+    /* Скрываем элемент по умолчанию */
     font-size: 20px;
     margin: 15px;
     align-items: start;
-
+    transition: opacity 0.3s ease;
+    /* Плавный переход */
 }
 
-
 .settingIconImg {
-    display: none;
+    opacity: 0;
+    /* Скрываем элемент по умолчанию */
     position: absolute;
     font-size: 30px;
     margin: 110px 0px 0px 120px;
+    transition: opacity 0.3s ease;
+    /* Плавный переход */
 }
 
-.settingIcon,
-.settingIconImg {
-    display: none;
-    /* Скрываем элементы по умолчанию */
-}
-
+.avatarContainer:hover .settingIcon,
 .avatarContainer:hover .settingIconImg,
-.secondContainer:hover .settingIcon {
-    display: block;
+.secondContainer:hover .settingIcon,
+.secondContainer:hover .settingIconImg {
+    opacity: 1;
     /* Показываем элементы при наведении */
 }
 
 .avatarContainer {
     position: relative;
-    /* Чтобы иконка могла позиционироваться относительно аватара */
-}
-
-.settingIconImg {
-    position: absolute;
-    /* Подкорректируйте по желанию */
-    right: 15px;
-    /* Подкорректируйте по желанию */
-    font-size: 30px;
-    /* Размер иконки */
 }
 
 .settingIcon {
     margin-left: 10px;
     /* Отступ между текстом и иконкой */
 }
-
 
 .avatarContainer {
     display: flex;
@@ -122,57 +109,28 @@
     font-size: 24px;
 }
 
-.workExperience {
+.workExperience,
+.education,
+.bio,
+.phone,
+.location {
     display: flex;
     justify-content: space-between;
     width: 80vw;
     min-height: 150px;
+    /* Можно изменить для phone и location */
     background-color: #fff;
     margin-top: 25px;
     border-radius: 10px;
 }
 
-.education{
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 150px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
-}
-
-.bio {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 100px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+.phone,
+.location {
+    min-height: 50px;
+    /* Для phone и location */
 }
 
 .divider {
     display: flex;
     flex-direction: column;
-}
-
-.phone {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 50px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
-}
-
-.location {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 50px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
 }
