--- a/client/src/features/auth/SignInForm/SignInForm.module.css
+++ b/client/src/features/auth/SignInForm/SignInForm.module.css
@@ -2,21 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 110vw;
 }
 
 .formContainer {
     display: flex;
     align-items: center;
-    /* width: 50vw; */
-    /* margin-left: 50vw; */
-}
-
-.ant-row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .input {
+    margin-top: 50px;
+    width: 500px;
 }
 
+.button {
+    margin-left: -30px;
+}
