--- a/client/src/features/auth/SignUpForm/SignUpForm.module.css
+++ b/client/src/features/auth/SignUpForm/SignUpForm.module.css
@@ -1,16 +1,35 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100vw;
 }
 
 .formContainer {
     display: flex;
-    width: 50vw;
-    margin-left: 50vw;
+    align-items: center;
+    margin-left: 9vw;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    width: 450px;
+    height: 60px;
+    background-color: #fff;
+    margin-top: 25px;
+    border-radius: 30px;
+    
+}
+
+.input {
+    margin-top: 20px;
+    width: 500px;
 }
 
 .button {
-    margin: 20px 0px 0px -30px;
+    margin-left: -2vw;
 
 }
