--- a/client/src/pages/UserPage/UserPage.module.css
+++ b/client/src/pages/UserPage/UserPage.module.css
@@ -1,178 +1,234 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
 }
 
 .button {
-    border: #ffffff00;
-    background-color: #ffffff00;
-    /* display: flex; */
-    font-size: 20px;
-    align-items: start;
-    
+  border: #ffffff00;
+  background-color: #ffffff00;
+  /* display: flex; */
+  font-size: 20px;
+  align-items: start;
 }
 
 .button:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 .buttonImg:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 .buttonImg {
-    border: #ffffff00;
-    background-color: #ffffff00;
-    display: flex;
-    font-size: 30px;
-    align-items: start;
+  border: #ffffff00;
+  background-color: #ffffff00;
+  display: flex;
+  font-size: 30px;
+  align-items: start;
 }
 
 .secondContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .secondTitle {
-    margin-left: 120px;
-    margin-bottom: 10px;
+  margin-left: 120px;
+  margin-bottom: 10px;
 }
 
 .settingIcon {
-    display: flex;
-    font-size: 20px;
-    margin: 15px;
-    align-items: start;
-
+  display: flex;
+  font-size: 20px;
+  margin: 15px;
+  align-items: start;
 }
 
-
 .settingIconImg {
-    display: none;
-    position: absolute;
-    font-size: 30px;
-    margin: 110px 0px 0px 120px;
+  display: none;
+  position: absolute;
+  font-size: 30px;
+  margin: 110px 0px 0px 120px;
 }
 
 .settingIcon,
 .settingIconImg {
-    display: none;
-    /* Скрываем элементы по умолчанию */
+  display: none;
+  /* Скрываем элементы по умолчанию */
 }
 
 .avatarContainer:hover .settingIconImg,
 .secondContainer:hover .settingIcon {
-    display: block;
-    /* Показываем элементы при наведении */
+  display: block;
+  /* Показываем элементы при наведении */
 }
 
 .avatarContainer {
-    position: relative;
-    /* Чтобы иконка могла позиционироваться относительно аватара */
+  position: relative;
+  /* Чтобы иконка могла позиционироваться относительно аватара */
 }
 
 .settingIconImg {
-    position: absolute;
-    /* Подкорректируйте по желанию */
-    right: 15px;
-    /* Подкорректируйте по желанию */
-    font-size: 30px;
-    /* Размер иконки */
+  position: absolute;
+  /* Подкорректируйте по желанию */
+  right: 15px;
+  /* Подкорректируйте по желанию */
+  font-size: 30px;
+  /* Размер иконки */
 }
 
 .settingIcon {
-    margin-left: 10px;
-    /* Отступ между текстом и иконкой */
+  margin-left: 10px;
+  /* Отступ между текстом и иконкой */
 }
 
-
 .avatarContainer {
-    display: flex;
+  display: flex;
 }
 
 .avatar {
-    position: relative;
-    margin-right: 10px;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    overflow: hidden;
+  position: relative;
+  margin-right: 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .titleHeader {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #fff;
-    width: 80vw;
-    margin-top: 25px;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 29px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #fff;
+  width: 80vw;
+  margin-top: 25px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  border-radius: 10px;
 }
 
 .title {
-    margin: 15px 10px 10px 15px;
-    font-size: 24px;
+  margin: 15px 10px 10px 15px;
+  font-size: 24px;
 }
 
 .workExperience {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 150px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 150px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
 }
 
-.education{
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 150px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+.education {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 150px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
 }
 
 .bio {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 100px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 100px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
+}
+
+.userStacks {
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 150px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
 }
 
 .divider {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .phone {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 50px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 50px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
 }
 
 .location {
-    display: flex;
-    justify-content: space-between;
-    width: 80vw;
-    min-height: 50px;
-    background-color: #fff;
-    margin-top: 25px;
-    border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 80vw;
+  min-height: 50px;
+  background-color: #fff;
+  margin-top: 25px;
+  border-radius: 10px;
+}
+
+.topContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 8px;
+}
+
+.userStacksContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+}
+
+.stackCard {
+  border: 1px solid #d9d9d9; /* Цвет рамки */
+  border-radius: 4px; /* Закругление углов */
+  padding: 8px; /* Уменьшенные внутренние отступы */
+  margin: 8px; /* Уменьшенные внешние отступы */
+  background-color: #fff; /* Цвет фона карточки */
+  /* box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1); Уменьшенная тень */
+  transition: transform 0.2s; /* Плавный эффект при наведении */
+  width: 100px; /* Уменьшенная ширина карточки */
+}
+
+.stackCard:hover {
+  transform: scale(1.03); /* Уменьшенный эффект увеличения при наведении */
+}
+
+.stackCardContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Центрирование содержимого */
+}
+
+.stackCardTitle {
+  /* font-size: 14px; Меньший размер шрифта для названия */
+  /* font-weight: bold; Выделение названия стека */
+  margin-bottom: 4px; /* Уменьшенный отступ между названием и изображением */
+}
+
+.stackIcon {
+  max-width: 80%; /* Уменьшенная ширина изображения */
+  height: auto; /* Автоматическая высота */
+  border-radius: 4px; /* Закругление углов изображения */
 }
