feat: style in footer

--- a/client/src/widgets/Footer/Footer.module.css
+++ b/client/src/widgets/Footer/Footer.module.css
@@ -5,5 +5,5 @@
     position: relative;
     width: 100vw;
     background-color: #fff;
-    color: var(--button-primary);
+    color: var(--progress-blue);
 }
