feat: add custom textarea

--- a/client/src/pages/UserPage/UserPage.module.css
+++ b/client/src/pages/UserPage/UserPage.module.css
@@ -51,8 +51,9 @@
 }
 
 .secondTitle {
-    margin-left: 120px;
-    margin-bottom: 10px;
+    margin: 10px 50px 35px 60px;
+    font-size: 18px;
+    line-height: 25px;
 }
 
 .settingIcon {
@@ -110,7 +111,7 @@
     width: 80vw;
     margin-top: 25px;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 30px;
     line-height: 29px;
     border-radius: 10px;
 }
@@ -127,7 +128,7 @@
 .location {
     display: flex;
     justify-content: space-between;
-    width: 80vw;
+    width: 60vw;
     min-height: 150px;
     /* Можно изменить для phone и location */
     background-color: #fff;
@@ -170,14 +171,17 @@
     justify-content: center;
     align-items: center;
     margin: 10px 0px 10px 50px;
+    /* padding-left: 1vw; */
 }
 
 .input {
-    width: 300px;
-    height: 30px;
+    display: flex;
+    margin: 10px 0px 10px 50px;
+    width: 55vw;
+    min-height: 30vw;
     border-radius: 10px;
     border: 1px solid #00000043;
-    padding-left: 10px;
+    padding-left: 1vw;
     font-size: 20px;
 }
 
