feat: favorite company button

--- a/client/src/entities/company/ui/CompanyItem.module.css
+++ b/client/src/entities/company/ui/CompanyItem.module.css
@@ -73,6 +73,21 @@
     margin-right: 15px; 
 }
 
+.cardButton {
+    position: relative; /* Относительное позиционирование для кнопки */
+}
+
+.favoritePosition {
+    position: absolute; /* Абсолютное позиционирование для звездочки */
+    top: 10px; /* Отступ от верхнего края */
+    right: 10px; /* Отступ от правого края */
+    cursor: pointer; /* Указываем, что элемент кликабельный */
+}
+
+.favoriteButton {
+    font-size: 24px; /* Увеличьте размер шрифта */
+    padding: 10px; /* Добавьте отступы */
+}
 
 
 
