--- a/client/src/pages/UserPage/UserPage.module.css
+++ b/client/src/pages/UserPage/UserPage.module.css
@@ -34,6 +34,10 @@
   transform: scale(0.9);
 }
 
+.buttonImg:hover {
+  color: #578cec;
+}
+
 .buttonImg {
   border: #ffffff00;
   background-color: #ffffff00;
@@ -197,7 +201,6 @@
   justify-content: space-between;
   width: 60vw;
   min-height: 150px;
-  /* Можно изменить для phone и location */
   background-color: #fff;
   margin-top: 25px;
   border-radius: 10px;
@@ -206,7 +209,6 @@
 .phone,
 .location {
   min-height: 50px;
-  /* Для phone и location */
 }
 
 .divider,
@@ -223,12 +225,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* Устанавливаем центрирование */
   align-items: center;
-  /* Устанавливаем центрирование */
   width: 20px;
   height: 1px;
-  /* Можно увеличить ширину, если нужно */
 }
 
 .secondButtonContainer {
@@ -243,7 +242,6 @@
   justify-content: center;
   align-items: center;
   margin: 10px 0px 10px 50px;
-  /* padding-left: 1vw; */
 }
 
 .input {
@@ -281,11 +279,27 @@
     color: red;
 }
 
+.userStacksButton {
+  margin-left: 10px;
+}
+
 .stackSettingIcon {
-    margin-right: 25px;
+    margin-right: 7px;
     font-size: 20px;
 }
 
 .stackSettingIcon:hover {
     color: #578cec;
+}
+
+.stackSettingIcon:active {
+    scale: 0.9;
+}
+
+.settingIcon:hover {
+    color: #578cec;
+}
+
+.settingIcon:active {
+    scale: 0.9;
 }
