feat: create main page and css

--- a/client/src/pages/MainPage/MainPage.module.css
+++ b/client/src/pages/MainPage/MainPage.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
+    margin-top: 25px;
 }
 
 .mainContainer {
@@ -14,51 +15,25 @@
     width: 1vw;
 }
 
+.mainTitle {
+    font-size: 50px;
+}
+
+.char2 {
+    color: #578cec;
+    font-size: 50px;
+    font-weight: 500;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 5vw;
+    width: 100vw;
 }
 
 .secondContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    width: 100vw;
-}
-
-.img {
-    display: flex;
-    width: 200px;
-    height: 100vw;
-    transform: rotate(90deg);
-}
-
-.title {
-    margin: 0px 250px 0px 250px;
-}
-
-.button {
-    background-color: #578cec;
-}
-
-.char {
-    color: #578cec;
-    font-size: 50px;
-}
-
-.container2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-}
-
-.secondContainer2 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,24 +42,28 @@
     background-color: #fff;
 }
 
-.img2 {
+.img {
     display: flex;
     width: 200px;
     height: 60vw;
     margin-top: -25vw;
-    margin-bottom: -20vw;
+    margin-bottom: -23vw;
     transform: rotate(90deg);
 }
 
-.title2 {
-    margin: 0px 150px 0px 150px;
+.title {
+    margin: 0px 150px 50px 150px;
+    font-size: 22px;
+    line-height: 35px;
 }
 
-.button2 {
+.button {
     background-color: #578cec;
 }
 
-.char2 {
+.char {
     color: #578cec;
-    font-size: 24px;
+    font-size: 22px;
+    /* font-weight: 500; */
 }
+
