--- a/client/src/widgets/Footer/Footer.module.css
+++ b/client/src/widgets/Footer/Footer.module.css
@@ -1,9 +1,31 @@
+.container {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer {
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
     bottom: 0;
-    margin-top: 25px;
-    position: relative;
+    right: 0;
+    left: 0;
     width: 100vw;
     background-color: #fff;
-    color: var(--progress-blue);
+    color: #578cec;
+    position: relative;
+    text-align: center;
+    /* font-weight: bold; */
+    font-size: 25px;
+    margin-top: 20px;
+    border-radius: 60px;
+}
+
+.icons {
+    margin-right: 20px;
+    font-size: 25px;
+}
+
+.secondContainer {
+    display: flex;
 }
