--- a/client/src/widgets/Footer/Footer.module.css
+++ b/client/src/widgets/Footer/Footer.module.css
@@ -15,14 +15,19 @@
     color: #578cec;
     position: relative;
     text-align: center;
-    /* font-weight: bold; */
     font-size: 25px;
     margin-top: 20px;
     border-radius: 60px;
 }
 
 .icons {
-    margin-right: 20px;
+    margin-right: 10px;
+    font-size: 25px;
+}
+
+.button {
+    border: none;
+    width: 60px;
     font-size: 25px;
 }
 
