feat: add footer and bottem footer always

--- a/client/src/app/styles/index.css
+++ b/client/src/app/styles/index.css
@@ -10,3 +10,9 @@ body {
   background-color: var(--background-primary);
   overflow-x: hidden;
 }
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
