--- a/client/src/widgets/CompanyDetails/CompanyDetails.module.css
+++ b/client/src/widgets/CompanyDetails/CompanyDetails.module.css
@@ -1,167 +1,167 @@
 .formContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  margin-top: 25px;
 }
 
 .fieldContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 80vw;
-    height: 150px;
-    margin-top: 15px;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px; 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80vw;
+  height: 150px;
+  margin-top: 15px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .settingIcon {
-    display: flex;
-    font-size: 20px;
-    margin: 15px;
-    align-items: start;
+  display: flex;
+  font-size: 20px;
+  margin: 15px;
+  align-items: start;
 }
 
 .fieldTitle {
-    font-size: 24px;
-    margin-right: 10px;
+  font-size: 24px;
+  margin-right: 10px;
 }
 
 .inputField {
-    flex: 1; 
-    padding: 5px; 
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    height: 30px;
+  flex: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  height: 30px;
 }
 
 .buttonSave {
-    margin-left: 10px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
-    cursor: pointer; 
+  margin-left: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  cursor: pointer;
 }
 
 .buttonSave:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .buttonDelete {
-    background-color: #f44336;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 16px;
-    cursor: pointer; 
-    margin-top: 10px;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 16px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 .buttonDelete:hover {
-    background-color: #e53935;
+  background-color: #e53935;
 }
 
 .modalContent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
-
-.modalButtons {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 15px;
-}
-
-.confirm {
-    padding: 15px 30px;
-    font-size: 18px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    flex: 1;
-    margin: 0 10px;
-}
-
-.confirm:hover {
-    background-color: #0056b3;
-}
-
-.cancel {
-    padding: 15px 30px;
-    font-size: 18px;
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    flex: 1;
-    margin: 0 10px;
-}
-
-.cancel:hover {
-    background-color: #c82333;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
 
 .fieldContainer {
-    position: relative;
+  position: relative;
 }
 
 .iconContainer {
-    position: absolute;
-    right: 1px;
-    top: 50%;
-    transform: translateY(-50%);
-    opacity: 0;
-    transition: opacity 0.3s;
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 .iconContainer button {
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
-    outline: none;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  outline: none;
 }
 
 .fieldContainer:hover .iconContainer {
-    opacity: 1;
-}
-
-.logoContainer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  opacity: 1;
 }
 
 .companyName {
-    font-size: 28px;
-    margin-top: 10px;
+  font-size: 28px;
+  margin-top: 10px;
 }
 
 .centeredContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-    width: 80vw;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 30px;
+  margin-top: 15px;
+  width: 80vw;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+}
+
+.buttonImg {
+  border: #ffffff00;
+  background-color: #ffffff00;
+  display: flex;
+  font-size: 30px;
+  align-items: start;
+}
+
+.settingIconImg {
+  opacity: 0;
+  position: absolute;
+  font-size: 30px;
+  margin: 110px 0px 0px 120px;
+  transition: opacity 0.3s ease;
+}
+
+.avatarContainer:hover .settingIcon,
+.avatarContainer:hover .settingIconImg,
+.secondContainer:hover .settingIcon,
+.secondContainer:hover .settingIconImg {
+  opacity: 1;
+}
+
+.avatar {
+  position: relative;
+  margin-right: 10px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.avatarContainer {
+  position: relative;
+  display: flex;
+}
+
+.dropdownContainer {
+  margin-bottom: auto;
 }
