--- a/client/src/widgets/CompanyForm/CompanyForm.module.css
+++ b/client/src/widgets/CompanyForm/CompanyForm.module.css
@@ -1,33 +1,47 @@
+.container {
+    display: flex;
+    align-items: center; 
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    margin: 20px auto;
+    max-height: 100px;
+}
+
+.showContainer {
+    max-height: 500px;
+}
+
 .formContainer {
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    overflow: hidden;
+    padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
     max-width: 400px;
-    margin: auto;
-    margin-bottom: 10px;
+    margin: 20px auto;
+    transition: max-height 1.0s ease, opacity 0.5s ease;
+    width: 100%;
+    opacity: 0;
+    gap: 20px;
 }
 
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-.input {
-    margin-bottom: 15px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.formContainer.show {
+    opacity: 1;
 }
 
 .button {
-    padding: 10px;
+    padding: 12px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 100%;
 }
 
 .button:disabled {
@@ -35,30 +49,23 @@
 }
 
 .buttonContainer {
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px ;
 }
 
-.toggleButton {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 10px;
-}
-.formContainer {
-    overflow: hidden;
-    max-height: 0;
-    opacity: 0;
-    transition: max-height 1.0s ease, opacity 0.5s ease;
-}
 
-.formContainer.show {
-    max-height: 500px; 
-    opacity: 5;
+.loadingOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+    z-index: 10;
 }
 
