--- a/client/src/widgets/NavBar/NavBar.module.css
+++ b/client/src/widgets/NavBar/NavBar.module.css
@@ -1,13 +1,34 @@
-.menu {
+.container {
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    float: right;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
 }
 
 .header {
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 70vw;
     border-radius: 30px;
-    margin: 10px 40px;
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+}
+
+.menuItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navButton {
+    width: 100px;
+    height: 2vw;
+    margin-top: 5px;
 }
