--- a/client/src/entities/user/ui/UserCard/UserCard.module.css
+++ b/client/src/entities/user/ui/UserCard/UserCard.module.css
@@ -6,30 +6,31 @@
     overflow: hidden;
 }
 
+.firstname {
+    margin: 0 5px;
+}
+
 .avatarContainer {
     display: flex;
     align-items: center;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
 .userCard {
-    max-width: 1300px;
-    height: 150px;
+    width: 250px !important;
+    height: 120px;
     margin: 20px;
     padding: 20px;
-    border: 1px solid #ffffff;
-    border-radius: 8px;
+    border: 3px solid #84848400;
+    border-radius: 30px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: 0.35s ease-in-out;
     opacity: 1;
     transform: translateY(0);
+}
+
+.userCard:hover {
+    border: 3px solid #578cec;
 }
 
 .visible {
