--- a/client/src/app/styles/index.css
+++ b/client/src/app/styles/index.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: var(--background-primary);
+  overflow-x: hidden;
+}
+
 .ant-layout-header {
   background-color: #fff;
 }
