--- a/client/src/widgets/NavBar/NavBar.module.css
+++ b/client/src/widgets/NavBar/NavBar.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
+    margin-top: 20px;
 }
 
 .header {
@@ -29,6 +30,5 @@
 
 .navButton {
     width: 100px;
-    height: 2vw;
     margin-top: 5px;
 }
