--- a/client/src/entities/company/ui/CompanyItem.module.css
+++ b/client/src/entities/company/ui/CompanyItem.module.css
@@ -15,7 +15,7 @@
     margin: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
