--- a/client/src/entities/user/ui/UserCard/UserCard.module.css
+++ b/client/src/entities/user/ui/UserCard/UserCard.module.css
@@ -22,7 +22,7 @@
     padding: 20px;
     border: 3px solid #84848400;
     border-radius: 30px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: 0.35s ease-in-out;
     opacity: 1;
