--- a/client/src/widgets/CompanyForm/CompanyForm.module.css
+++ b/client/src/widgets/CompanyForm/CompanyForm.module.css
@@ -21,7 +21,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     max-width: 400px;
     margin: 20px auto;
     transition: max-height 1.0s ease, opacity 0.5s ease;
