--- a/client/src/widgets/CompanyDetails/CompanyDetails.module.css
+++ b/client/src/widgets/CompanyDetails/CompanyDetails.module.css
@@ -8,23 +8,12 @@
 }
 
 .fieldContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 80vw;
-  height: 150px;
+  width: 60vw;
+  height: auto;
   margin-top: 15px;
   background-color: #fff;
   border-radius: 10px;
   padding: 10px;
-}
-
-.settingIcon {
-  display: flex;
-  font-size: 20px;
-  margin: 15px;
-  align-items: start;
 }
 
 .fieldTitle {
@@ -40,39 +29,20 @@
   height: 30px;
 }
 
+.input {
+  border-radius: 10px;
+  margin: 10px 0px 10px 0px;
+}
+
 .buttonSave {
-  margin-left: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 16px;
+  /* margin-left: 10px; */
+  width: 150px;
+  height: 30px;
+  border-radius: 30px;
+  border: 1px solid #00000043;
+  font-size: 15px;
+  background-color: #fff;
   cursor: pointer;
-}
-
-.buttonSave:hover {
-  background-color: #0056b3;
-}
-
-.buttonDelete {
-  background-color: #f44336;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 16px;
-  cursor: pointer;
-  margin-top: 10px;
-}
-
-.buttonDelete:hover {
-  background-color: #e53935;
-}
-
-.modalContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
 }
 
 .fieldContainer {
@@ -81,9 +51,8 @@
 
 .iconContainer {
   position: absolute;
-  right: 1px;
-  top: 50%;
-  transform: translateY(-50%);
+  right: 10px;
+  top: 10px;
   opacity: 0;
   transition: opacity 0.3s;
 }
@@ -112,18 +81,19 @@
   align-items: center;
   font-size: 30px;
   margin-top: 15px;
-  width: 80vw;
+  width: 60vw;
   background-color: #fff;
   border-radius: 10px;
   padding: 10px;
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   background-color: transparent;
-  display: flex;
-  align-items: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .buttonImg {
@@ -134,12 +104,28 @@
   align-items: start;
 }
 
+.buttonImg:hover {
+  color: #578cec;
+}
+
+.buttonImg:active {
+  transform: scale(0.9);
+}
+
 .settingIconImg {
   opacity: 0;
   position: absolute;
   font-size: 30px;
   margin: 110px 0px 0px 120px;
   transition: opacity 0.3s ease;
+}
+
+.settingIcon:active {
+  transform: scale(0.9);
+}
+
+.settingIcon:hover {
+  color: #578cec;
 }
 
 .avatarContainer:hover .settingIcon,
@@ -164,4 +150,33 @@
 
 .dropdownContainer {
   margin-bottom: auto;
+}
+
+.modal__content h3 {
+font-size: 20px;
+margin-bottom: 20px;
+text-align: center;
+margin-bottom: 40px;
+}
+
+.modalButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.secondTitle {
+  font-family: 'Gill Sans', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  text-wrap: wrap;
+  margin: 0px 0px 0px 50px;
+  width: 55vw;
+  border-radius: 10px;
+  padding: 2vw;
+  font-size: 20px;
+}
+
+.inputWrapper {
+  width: 100% !important;
 }
