--- a/client/src/widgets/UsersList/UsersList.module.css
+++ b/client/src/widgets/UsersList/UsersList.module.css
@@ -1,8 +1,8 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: 100vw;
+    width: 75vw;
 }
 
 .cardContainer {
