rework company page

--- a/client/src/widgets/CompanyDetails/CompanyDetails.module.css
+++ b/client/src/widgets/CompanyDetails/CompanyDetails.module.css
@@ -8,12 +8,29 @@
 }
 
 .fieldContainer {
+  /* display: flex; */
+  /* justify-content: flex-end; */
   width: 60vw;
   height: auto;
   margin-top: 15px;
   background-color: #fff;
   border-radius: 10px;
   padding: 10px;
+}
+
+.inputWrapper {
+  height: 100% !important;
+  width: 100% !important;
+}
+
+.button {
+  /* margin-left: auto; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
 }
 
 .fieldTitle {
@@ -87,14 +104,7 @@
   padding: 10px;
 }
 
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  background-color: transparent;
-  font-size: 20px;
-}
+
 
 .buttonImg {
   border: #ffffff00;
@@ -177,6 +187,3 @@ margin-bottom: 40px;
   font-size: 20px;
 }
 
-.inputWrapper {
-  width: 100% !important;
-}
