--- a/client/src/entities/company/ui/CompanyItem.module.css
+++ b/client/src/entities/company/ui/CompanyItem.module.css
@@ -37,21 +37,19 @@
     text-align: left;
 }
 
-.starContainer {
-    position: relative;
-}
 
 .favoriteButton {
-    position: relative;
+    position: absolute;
+    top: 5px;
+    right: 5px;
     font-size: 24px;
     cursor: pointer;
 }
 
 .tooltip {
     position: absolute;
-    left: 50%;
-    bottom: 100%;
-    transform: translateX(-50%) translateY(-5px);
+    left: 100%;
+    top: 100%;
     background-color: white;
     color: rgba(0, 0, 0, 0.7);
     padding: 3px 6px;
