--- a/client/src/pages/UserStackPage/UserStackPage.module.css
+++ b/client/src/pages/UserStackPage/UserStackPage.module.css
@@ -134,6 +134,7 @@
   background-color: #fff; /* Цвет фона карточки */
   justify-content: center;
   align-items: center;
+  font-size: 18px;
   border-radius: 30px;
   margin-top: 25px;
   width: 60vw;
