--- a/client/src/widgets/CompanyList/CompanyList.module.css
+++ b/client/src/widgets/CompanyList/CompanyList.module.css
@@ -10,6 +10,15 @@
     margin-bottom: 20px;
 }
 
+.secondGroup {
+    display: flex;
+    align-items: center;
+}
+
+.secondButton {
+    border-radius: 30px;
+}
+
 .cardContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
