--- a/client/src/entities/company/ui/CompanyItem.module.css
+++ b/client/src/entities/company/ui/CompanyItem.module.css
@@ -1,3 +1,8 @@
+.container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .companyCard {
     width: 250px !important;
     height: 120px;
@@ -20,6 +25,7 @@
 .avatarContainer {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .avatar {
