--- a/client/src/widgets/CompanyList/CompanyList.module.css
+++ b/client/src/widgets/CompanyList/CompanyList.module.css
@@ -12,6 +12,7 @@
 
 .cardContainer {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
